--- a/KeyboardSample/build.gradle
+++ b/KeyboardSample/build.gradle
@@ -14,6 +14,14 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "http://dl.appnext.com/" }
+        maven {
+            url myMavenRepoReadUrl
+            credentials {
+                username 'myMavenRepo'
+                password myMavenRepoReadPassword
+            }
+        }
         google()
         jcenter()
     }
