--- a/KeyboardSample/gradle.properties
+++ b/KeyboardSample/gradle.properties
@@ -17,3 +17,5 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+myMavenRepoReadUrl=https://mymavenrepo.com/repo/2FqJOJdaSGkWHp9C8KDx/
+myMavenRepoReadPassword=e2n3HEAGfHReeK6J
